--- a/angular-recipe-app/src/app/header/header.component.html
+++ b/angular-recipe-app/src/app/header/header.component.html
@@ -4,8 +4,7 @@
       <button
         type="button"
         class="navbar-toggle"
-        (click)="collapsed = !collapsed"
-      >
+        (click)="collapsed = !collapsed">
         <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
       </button>
       <a routerLink="/" class="navbar-brand">Recipe Book</a>
@@ -13,11 +12,10 @@
     <div
       class="navbar-collapse"
       [class.collapse]="collapsed"
-      (window:resize)="collapsed = true"
-    >
+      (window:resize)="collapsed = true">
       <ul class="nav navbar-nav">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
+        <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
