--- a/angular-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/angular-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
     <img 
-    [src]="" 
+    [src]="recipe.imagePath" 
     alt="{{ recipe.name }}" 
     class="img-responsive"
     style="max-height: 300px;">
@@ -16,7 +16,7 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropdown>
       <button type="button"
       class="btn btn-primary dropdown-toggle"
       >Manage Recipe <span class="caret"></span>
