--- a/services-assignment-start/src/app/inactive-users/inactive-users.component.html
+++ b/services-assignment-start/src/app/inactive-users/inactive-users.component.html
@@ -2,7 +2,9 @@
 <ul class="list-group">
   <li
     class="list-group-item"
-    *ngFor="let user of users; let i = index">
+    *ngFor="let user of users; let i = index"
+    [id]="i"
+    >
     {{ user }} | <a href="#" (click)="onSetToActive(i)">Set to Active</a>
   </li>
 </ul>
