--- a/forms-reactive-start/src/app/app.component.html
+++ b/forms-reactive-start/src/app/app.component.html
@@ -16,7 +16,14 @@
               signupForm.get('userData.username').touched
             "
             class="help-block"
-            >Please enter a valid username!</span
+            >
+            <span *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']">
+              This name is invalid!
+            </span>
+             <span *ngIf="signupForm.get('userData.username').errors['required']">
+              This field is required
+            </span>
+          </span
           >
           <div class="form-group">
             <label for="email">email</label>
@@ -47,7 +54,7 @@
           <h4>Your Hobbies</h4>
           <button class="btn btn-default" type="button" (click)="onAddHobby()">Add Hobby</button>
           <div class="form-group">
-            <input type="text" *ngFor="let hobbyControl of getControls(); let i = index" >
+            <input type="text" class="form-control" *ngFor="let hobbyControl of getControls(); let i = index" [formControlName]="i" >
           </div>
         </div>
         <span *ngIf="!signupForm.valid && signupForm.touched" class="help-block"
