added an API call

--- a/angular-first-app/src/app/app.component.html
+++ b/angular-first-app/src/app/app.component.html
@@ -10,6 +10,18 @@
       <app-username></app-username>
       <hr>
       <app-details></app-details>
+      <table border ="1">
+        <tr>
+          <td>ID</td>
+          <td>Title</td>
+          <td>User Id</td>
+        </tr>
+        <tr *ngFor ="let item of data">
+          <td>{{ item.id }}</td>
+          <td>{{ item.title }}</td>
+          <td>{{ item.userId }}</td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
